@@ -19,8 +19,8 @@ module DevKitInstaller
           'libgcc-4.6.2-1-mingw32-dll-1.tar.lzma',
           'libstdc++-4.6.2-1-mingw32-dll-6.tar.lzma',
           'binutils-2.22-1-mingw32-bin.tar.lzma',
-          'mingwrt-3.20-mingw32-dev.tar.gz',
-          'mingwrt-3.20-mingw32-dll.tar.gz',
+          'mingwrt-3.20-2-mingw32-dev.tar.lzma',
+          'mingwrt-3.20-2-mingw32-dll.tar.lzma',
           'w32api-3.17-2-mingw32-dev.tar.lzma',
           'autoconf2.5-2.68-1-mingw32-bin.tar.lzma',
           'autoconf-10-1-mingw32-bin.tar.lzma',
