@@ -14,6 +14,7 @@
     2048 FDs
 
 * Internal:
+  * Upgraded mingwrt for tdm-32-4.6.1 and mingw-32-4.6.2
   * Upgraded specific DevKit's to GDB version 7.5
   * Allow cleanup before make to satisfy CI environment.
     Usage:
